# pyrelay

./: .env  .gitignore  .pre-commit-config.yaml  README.md  backend.dockerfile  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-tests.txt  requirements.txt
pynostr/: alembic.ini
pynostr/alembic/: env.py
pynostr/alembic/versions/: 9b2e8a3aee6b_add_tag_extras.py  9ef618136f49_add_kind.py
pynostr/client/: client.py  producer_client.py  watcher_client.py
pynostr/nostr/: event.py  event_builder.py  filters.py  msgs.py  requests.py  serialize.py
pynostr/relay/: bootstrap.py  client_session.py  config.py  relay_service.py  server.py
pynostr/relay/db/: session.py  tables.py
pynostr/relay/repos/: in_memory_event_repo.py  sqlalchemy_event_repo.py
pyrelay/alembic/: env.py
pyrelay/alembic/versions/: 5c571f8007b7_add_deleted_at.py
pyrelay/client/: client.py  producer_client.py  watcher_client.py
pyrelay/nostr/: event.py  event_builder.py  filters.py  msgs.py  pow.py  serialize.py
pyrelay/relay/: bootstrap.py  client_session.py  config.py  dispatcher.py  nip_config.py  relay_service.py  server.py  unit_of_work.py
pyrelay/relay/db/: session.py  tables.py
pyrelay/relay/handlers/: event_handler.py  send_event_handler.py  subscribe_handler.py  (+1 more)
scripts/: execute_scenario.sh  format-imports.sh  format.sh  lint.sh  run.sh  test-cov-html.sh  test.sh
tests/: __init__.py  strategies.py
tests/nostr/: test_event_builder.py  test_filters.py  test_pow.py  test_serialization.py
tests/relay/: test_relay_dispatcher.py  test_relay_service.py
(+6 files in other folders)
