[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[tool.black]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88


[tool.poetry]
name = "pyrelay"
version = "0.1.0"
description = "PyRelay is a python implementation of a NOSTR Relay, using asyncio."
authors = ["jonny <johnnybarda423@gmail.com>"]
license = "apache 2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
attr = "0.3.2"
attrs = "22.2.0"
pydantic = "1.10.4"
secp256k1 = "0.14.0"
SQLAlchemy = "1.4.46"
websockets = "10.4"
alembic = "1.9.1"
aiosqlite = "0.18.0"

[tool.poetry.dev-dependencies]
isort = "5.11.4"
black = "22.12.0"
autoflake = "2.0.0"
pytest = "7.2.0"
hypothesis = "6.62.0"
pytest-asyncio = "0.20.3"
pytest-cov = "4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
